[tool.poetry]
name = "data-police-shootings"
version = "0.1.0"
description = "Police Shootings"
authors = ["Chushaf"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
